--- a/styles/formulario.css
+++ b/styles/formulario.css
@@ -35,8 +35,7 @@
 }
 
 .formulario__campo {
-    margin: .6em 3em .6em 0;
-
+    margin: .6em 5em .3em 0;
 }
 
 .formulario__dupla {
@@ -74,4 +73,9 @@
     font-size: 12px;
     line-height: 18px;
     color: var(--vermelho);
+}
+
+#erro {
+    color: red;
+    font-weight: 600;
 }
